# sellmeat

./: README.md  render.yaml
backend/: .env.example  README.md  alembic.ini  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: a271db64341b_initial.py  add_is_archived_to_orders.py
backend/app/: config.py  deps.py  main.py
backend/app/models/: category.py  delivery_slot.py  meat_type.py  order.py  product.py  settings.py  user.py
backend/app/routers/: auth.py  categories.py  delivery_slots.py  meat_types.py  orders.py  products.py  settings.py
backend/app/schemas/: category.py  delivery_slot.py  meat_type.py  order.py  product.py  settings.py  user.py
backend/app/services/: auth.py  order.py
mobile/: .gitignore  .session.json  README.md  auth.py  main.py  pyproject.toml
mobile/components/: ui.py
mobile/models/: delivery_slot.py  order.py  product.py  settings.py  user.py
mobile/services/: api.py
mobile/viewmodels/: auth_viewmodel.py  base.py  cart_viewmodel.py  catalog_viewmodel.py  customer_orders_viewmodel.py  manage_meat_viewmodel.py  manage_products_viewmodel.py  manage_settings_viewmodel.py  manage_slots_viewmodel.py  order_detail_viewmodel.py  seller_dashboard_viewmodel.py  seller_orders_viewmodel.py
mobile/views/: auth_view.py  cart_view.py  catalog_view.py  customer_orders_view.py  manage_meat_view.py  manage_products_view.py  manage_settings_view.py  manage_slots_view.py  order_detail_view.py  seller_dashboard_view.py  seller_orders_view.py
