[project]
name = "sellmeat-mobile"
version = "0.1.0"
description = "SellMeat mobile app built with Flet and MVVM"
requires-python = ">=3.11"
dependencies = [
    "flet>=0.25.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["models*", "viewmodels*", "views*", "services*", "components*"]
